spec/test_templates/json/security_group/two_security_group_two_cidr_ingress.json
{
  "Resources": {
    "sg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "some_group_desc",
        "SecurityGroupIngress": {
          "CidrIp": "10.1.2.3/32",
          "FromPort": 34,
          "ToPort": 36,
          "IpProtocol": "tcp",
          "Description": "some rule description"
        },
        "VpcId": "vpc-9f8e9dfa"
      }
    },
    "sg2": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "some_group_desc2",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 0,
            "ToPort": 36,
            "IpProtocol": "tcp",
            "Description": "some rule description"
          },
          {
            "CidrIp": "1.2.3.4/32",
            "FromPort": 45,
            "ToPort": 46,
            "IpProtocol": "tcp",
            "Description": "some rule description"
          }
        ],
        "VpcId": "vpc-9f8e9dfa"
      }
    }
  }
}
